2011-02-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix distribution of the `fft' benchmark.

	* benchmarks/fft/Makefile.am (BUILT_SOURCES): List the headers
	containing the precomputed tables.

2011-02-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix Unibench distribution.

	* build-aux/benchmarks.mk (.c.tar): Ensure that the Unibench
	Makefiles link benchmarks with the math library.

2011-01-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the `mandel' benchmark.

	* benchmarks/mandel/mandel_colors.c: Make this program more
	exciting to see running (SKIP_MEM + TRACE_COMPUTE).

2011-01-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New 2D cellular automaton benchmark.

	* benchmarks/ca/ca2d.c,
	* benchmarks/ca/ca2d.h,
	* benchmarks/ca/makerule2d.c,
	* benchmarks/ca/benchca.c,
	* benchmarks/ca/benchca_gfx.c,
	* benchmarks/ca/glider.d9000,
	* benchmarks/ca/rpent.d9000,
	* benchmarks/ca/rabbits.d9000,
	* benchmarks/ca/herschel.d9000,
	* benchmarks/ca/lidka.d9000,
	* benchmarks/ca/lidka.d37200,
	* benchmarks/ca/lidka.d768800,
	* benchmarks/ca/one.d9000,
	* benchmarks/ca/benchca.inputs,
	* benchmarks/ca/Makefile.am: New.

	* benchmarks/Makefile.am: New subdirectory `ca'.

	* configure.ac: New sub-Makefile.

2011-01-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Introduce a cellular automaton simulation as demo.

	* demo/ca1d.c,
	* demo/ca1d.h,
	* demo/ca1d_main.c,
	* demo/ca1d_demo.c,
	* demo/ca1d_demo2.c: New.

	* demo/Makefile.am (DEMOS): Extend with `ca1d_demo' and
	`ca1d_demo2'.	
	* demo/Makefile.am (EXTRA_DIST): Also mention the included files.

2011-01-05  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update contact information.
	
	* configure.ac: Update `PACKAGE_BUGREPORT'.

2011-01-05  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Synchronize the Livermore benchmark interfaces with Apple-CORE.

	* benchmarks/livermore/ll-generate.py: Order input arguments
	according to an externally-specified order.

	* benchmarks/livermore/sacorder1.txt